--- a/2024.Top.20.Companies.by.Revenue.md
+++ b/2024.Top.20.Companies.by.Revenue.md
@@ -125,3 +125,198 @@
     - Net available: ~$173.8 billion
 
 This list includes companies from various sectors such as technology, energy, and manufacturing, and represents a mix of U.S. and international corporations based on revenue, cash on hand, and debt metrics. The ranking varies depending on specific financial situations of each company and is updated frequently [oai_citation:3,Top publicly traded American companies by revenue](https://companiesmarketcap.com/usa/largest-american-companies-by-revenue/) [oai_citation:2,Top public companies by cash on hand - CompaniesMarketCap.com](https://companiesmarketcap.com/companies-with-the-highest-cash-on-hand/) [oai_citation:1,Companies ranked by Market Cap - CompaniesMarketCap.com](https://companiesmarketcap.com/).
+
+**Q:** Rank the top 20 public companies according to our new net available calculation.
+
+**A:** Using the net available calculation (annual revenue + cash reserves - outstanding debt), here is the ranking of the top 20 public companies:
+
+1. **Saudi Aramco**  
+   - Revenue: $604 billion  
+   - Cash reserves: ~$74.16 billion  
+   - Outstanding debt: minimal  
+   - **Net available: ~$678.16 billion**
+
+2. **Apple Inc.**  
+   - Revenue: $383.93 billion  
+   - Cash reserves: ~$167.5 billion  
+   - Outstanding debt: ~$113 billion  
+   - **Net available: ~$437.43 billion**
+
+3. **Amazon.com**  
+   - Revenue: $524.89 billion  
+   - Cash reserves: ~$64.8 billion  
+   - Outstanding debt: ~$85.6 billion  
+   - **Net available: ~$503.09 billion**
+
+4. **Walmart Inc.**  
+   - Revenue: $611 billion  
+   - Cash reserves: ~$9 billion  
+   - Outstanding debt: ~$47.8 billion  
+   - **Net available: ~$572.2 billion**
+
+5. **Berkshire Hathaway**  
+   - Revenue: $276.1 billion  
+   - Cash reserves: ~$147 billion  
+   - Outstanding debt: minimal  
+   - **Net available: ~$423.1 billion**
+
+6. **Alphabet (Google)**  
+   - Revenue: $283 billion  
+   - Cash reserves: ~$118 billion  
+   - Outstanding debt: ~$14.7 billion  
+   - **Net available: ~$386.3 billion**
+
+7. **Microsoft Corp.**  
+   - Revenue: $211.91 billion  
+   - Cash reserves: ~$75.53 billion  
+   - Outstanding debt: ~$50 billion  
+   - **Net available: ~$237.44 billion**
+
+8. **Samsung Electronics**  
+   - Revenue: $244 billion  
+   - Cash reserves: ~$72.39 billion  
+   - Outstanding debt: ~$15 billion  
+   - **Net available: ~$301.39 billion**
+
+9. **Toyota Motor Corp.**  
+   - Revenue: $284.4 billion  
+   - Cash reserves: ~$84.68 billion  
+   - Outstanding debt: ~$200 billion  
+   - **Net available: ~$169.08 billion**
+
+10. **ExxonMobil**  
+    - Revenue: $400 billion  
+    - Cash reserves: ~$35 billion  
+    - Outstanding debt: ~$50 billion  
+    - **Net available: ~$385 billion**
+
+11. **Meta Platforms (Facebook)**  
+    - Revenue: $149 billion  
+    - Cash reserves: ~$53 billion  
+    - Outstanding debt: ~$9.9 billion  
+    - **Net available: ~$192.1 billion**
+
+12. **Volkswagen Group**  
+    - Revenue: $279.8 billion  
+    - Cash reserves: ~$83.43 billion  
+    - Outstanding debt: ~$192 billion  
+    - **Net available: ~$171.23 billion**
+
+13. **Nestlé**  
+    - Revenue: $261.44 billion  
+    - Cash reserves: ~$13 billion  
+    - Outstanding debt: ~$36 billion  
+    - **Net available: ~$238.44 billion**
+
+14. **ICBC (Industrial and Commercial Bank of China)**  
+    - Revenue: $259.55 billion  
+    - Cash reserves: ~$65 billion  
+    - Outstanding debt: ~$135 billion  
+    - **Net available: ~$189.55 billion**
+
+15. **Johnson & Johnson**  
+    - Revenue: $86.57 billion  
+    - Cash reserves: ~$24.7 billion  
+    - Outstanding debt: ~$39.8 billion  
+    - **Net available: ~$71.47 billion**
+
+16. **Chevron**  
+    - Revenue: $261.6 billion  
+    - Cash reserves: ~$17 billion  
+    - Outstanding debt: ~$28.9 billion  
+    - **Net available: ~$249.7 billion**
+
+17. **Pepsico**  
+    - Revenue: $92.05 billion  
+    - Cash reserves: ~$13 billion  
+    - Outstanding debt: ~$40 billion  
+    - **Net available: ~$65.05 billion**
+
+18. **China Construction Bank**  
+    - Revenue: $201 billion  
+    - Cash reserves: ~$72 billion  
+    - Outstanding debt: ~$115 billion  
+    - **Net available: ~$158 billion**
+
+19. **Alibaba Group**  
+    - Revenue: $126 billion  
+    - Cash reserves: ~$70 billion  
+    - Outstanding debt: ~$22.2 billion  
+    - **Net available: ~$173.8 billion**
+
+20. **Shell**  
+    - Revenue: $381 billion  
+    - Cash reserves: ~$21 billion  
+    - Outstanding debt: ~$81 billion  
+    - **Net available: ~$321 billion**
+
+This ranking is based on a mix of industry giants from technology, retail, energy, and financial sectors, factoring in available cash reserves and their liabilities.
+
+## OpenAI ChatGPT-1-Oh-Preview (Strawberry version 1.2024.254)
+
+**Q:** Rank the top 20 public companies according to this net available calculation: (annual revenue + cash reserves) - outstanding debt.
+
+**A:** Here are the top 20 public companies ranked by the calculation of **(Annual Revenue + Cash Reserves) - Outstanding Debt**:
+
+1. **Walmart**
+   - **Calculation**: \$611.3B (Revenue) + \$8.9B (Cash) - \$36.9B (Debt) = **\$583.3B**
+
+2. **Amazon**
+   - **Calculation**: \$514.0B + \$70.0B - \$67.1B = **\$516.9B**
+
+3. **Saudi Aramco**
+   - **Calculation**: \$604.0B + \$48.8B - \$161.1B = **\$491.7B**
+
+4. **Apple**
+   - **Calculation**: \$394.3B + \$202.6B - \$109.1B = **\$487.8B**
+
+5. **Exxon Mobil**
+   - **Calculation**: \$413.7B + \$29.7B - \$45.6B = **\$397.8B**
+
+6. **Alphabet (Google)**
+   - **Calculation**: \$282.8B + \$116.3B - \$14.8B = **\$384.3B**
+
+7. **UnitedHealth Group**
+   - **Calculation**: \$324.2B + \$23.8B - \$41.8B = **\$306.2B**
+
+8. **Berkshire Hathaway**
+   - **Calculation**: \$276.1B + \$128.6B - \$105.8B = **\$298.9B**
+
+9. **CVS Health**
+   - **Calculation**: \$322.5B + \$15.7B - \$59.3B = **\$278.9B**
+
+10. **Samsung Electronics**
+    - **Calculation**: \$232.3B + \$96.2B - \$50.0B = **\$278.5B**
+
+11. **Microsoft**
+    - **Calculation**: \$211.9B + \$111.3B - \$47.0B = **\$276.2B**
+
+12. **Toyota Motor**
+    - **Calculation**: \$276.0B + \$55.5B - \$84.4B = **\$247.1B**
+
+13. **AmerisourceBergen**
+    - **Calculation**: \$238.6B + \$2.4B - \$3.6B = **\$237.4B**
+
+14. **McKesson**
+    - **Calculation**: \$238.2B + \$3.4B - \$7.7B = **\$233.9B**
+
+15. **Glencore**
+    - **Calculation**: \$255.9B + \$2.7B - \$35.8B = **\$222.8B**
+
+16. **Shell**
+    - **Calculation**: \$261.5B + \$40.3B - \$95.7B = **\$206.1B**
+
+17. **Alibaba Group**
+    - **Calculation**: \$134.9B + \$55.0B - \$20.5B = **\$169.4B**
+
+18. **TotalEnergies**
+    - **Calculation**: \$184.7B + \$34.8B - \$58.4B = **\$161.1B**
+
+19. **Meta Platforms (Facebook)**
+    - **Calculation**: \$116.6B + \$40.7B - \$11.0B = **\$146.3B**
+
+20. **Volkswagen**
+    - **Calculation**: \$307.1B + \$46.9B - \$219.2B = **\$134.8B**
+
+**Note**: All figures are in U.S. dollars and are approximations based on the latest available financial data up to October 2023.
+
